--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
           </div>
 
           <nav class="nav">
-            <!-- <div class="nav__content"> -->
-            <ul class="nav__menu">
+            <ul class="nav__content">
+           
               <li class="nav__menu__item">
                 <a href="" class="nav__menu__link">about</a>
               </li>
@@ -54,8 +54,8 @@
               <li class="nav__menu__item">
                 <a href="" class="nav__menu__link">contacts</a>
               </li>
+            
             </ul>
-            <!-- </div> -->
           </nav>
 
           <form action="" class="header__login__form">
