--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
             </form>
 
             <nav class="header__nav">
-              <!-- <input id="nav__toggle" type="checkbox" />
+              <input id="nav__toggle" type="checkbox" />
               <label class="nav__btn" for="nav__toggle">
                 <span></span>
-              </label> -->
+              </label>
   
               <ul class="nav__menu">
                 <li class="nav__menu__item">
@@ -187,14 +187,14 @@
       <div class="main__content">
 
         <div class="tour__card">
-          <div class="tour__card__title">
-            <h3 class="tour__name">Paris</h3>
-            <span class="tour__duration">
+          <div class="card__title">
+            <h3 class="name">Paris</h3>
+            <span class="duration">
               (8 days)
             </span>
           </div>
 
-          <div class="tour__basic__details">
+          <div class="basic__details">
             <ul class="route">
               <li class="route__point__title">
                 <h5>
@@ -289,16 +289,16 @@
             </div>
           </div>
 
-          <figure class="tour__description">
+          <figure class="description">
 
             <img src="img/paris1.jpg" alt="Eiffel" class="content__image">
 
-            <figcaption class="tour__descr">
-              <h6 class="tour__descr__title">
+            <figcaption class="descr">
+              <h6 class="descr__title">
                 Tour Description
               </h6>
   
-              <p class="tour__descr__text">
+              <p class="descr__text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                  Dicta omnis magnam sunt ex beatae fugit nisi a minus, eos, fuga id placeat soluta sequi eius illo debitis qui non laboriosam!
               </p>
@@ -306,48 +306,48 @@
           </figure>
 
 
-          <ul class="tour__included">
-            <li class="tour__included__title">
+          <ul class="included">
+            <li class="included__title">
               <h6>
                 Included:
               </h6>
             </li>
-            <li class="tour__included__item">
+            <li class="included__item">
               7 nights in hotels 3*;
             </li>
-            <li class="tour__included__item">
+            <li class="included__item">
               BB (bed & breakfast);
             </li>
-            <li class="tour__included__item">
+            <li class="included__item">
               Transit along the route;
             </li>
-            <li class="tour__included__item">
+            <li class="included__item">
               Excursions according to the program;
             </li>
-            <li class="tour__included__item">
+            <li class="included__item">
               Accompanied by an enchanting guide;
             </li>
           </ul> 
 
-          <ul class="tour__not__included">
-            <li class="tour__not__included__title">
+          <ul class="not__included">
+            <li class="not__included__title">
               <h6>
                 Not included:
               </h6>
             </li>
-            <li class="tour__not__included__item">
+            <li class="not__included__item">
               Transit to Lviv;
             </li>
-            <li class="tour__not__included__item">
+            <li class="not__included__item">
               Medical insurance;
             </li>
-            <li class="tour__not__included__item">
+            <li class="not__included__item">
               Entry tickets, extra paid excursions;
             </li>
-            <li class="tour__not__included__item">
+            <li class="not__included__item">
               City-TAX, radio-guide system;
             </li>
-            <li class="tour__not__included__item">
+            <li class="not__included__item">
               Single accomodation;
             </li>
           </ul> 
