--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
           <div class="travel__ways container-fluid">
             <ul class="travel__ways__list row">
               
-              <li class="travel__ways__list__title text-center col-lg-8 col-md-6 col-sm-4 ">
+              <li class="travel__ways__list__title section text-center col-lg-8 col-md-6 col-sm-4 ">
                 Travel ways
               </li>
               <li class="travel__way__item sun__rotate section col-lg-5 col-sm-12 mr-auto">
